--- a/Liar's_Dice.vcxproj
+++ b/Liar's_Dice.vcxproj
@@ -74,6 +74,10 @@
     <IncludePath>C:\Users\HP\source\repos\Liar-s-Dice-C-\SDL2_ttf-2.22.0\include;C:\Users\HP\source\repos\Liar-s-Dice-C-\SDL2-2.30.7\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\HP\source\repos\Liar-s-Dice-C-\SDL2_ttf-2.22.0\lib\x64;C:\Users\HP\source\repos\Liar-s-Dice-C-\SDL2-2.30.7\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>C:\Users\HP\source\repos\Liar-s-Dice-C-\SDL2_ttf-2.22.0\include;C:\Users\HP\source\repos\Liar-s-Dice-C-\SDL2-2.30.7\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\HP\source\repos\Liar-s-Dice-C-\SDL2_ttf-2.22.0\lib\x64;C:\Users\HP\source\repos\Liar-s-Dice-C-\SDL2-2.30.7\lib\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -129,6 +133,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
